# PWNGHOST-RS

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile.builder  HANDOFF.md  Makefile  PLAN.md  REWORK_PLAN.md  SPEC.md  TASKS.md  port-oxigotchi-to-32-bit-arm-pi-5-20260714.json
.github/: WORKFLOW_README.md
.github/workflows/: build.yml  rebase-jayofelony.yml  release.yml  test.yml
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs  capture.rs  epoch.rs  faces.rs  healing.rs  identity.rs  lib.rs  mesh.rs  personality.rs  plugins.rs  recovery.rs
crates/agent/tests/: integration_tests.rs
crates/angryoxide/: Cargo.toml
crates/angryoxide/src/: args.rs  lib.rs  parser.rs  recovery.rs  spawn.rs
crates/bettercap/: Cargo.toml
crates/bettercap/src/: client.rs  lib.rs  session.rs
crates/config/: Cargo.toml
crates/config/src/: defaults.toml  lib.rs  migrate.rs  schema.rs
crates/fw-patcher/: Cargo.toml
crates/fw-patcher/src/: detect.rs  gpio.rs  keepalive.rs  lib.rs  manifest.rs  monitor.rs  patch.rs
crates/lua/: auto_backup.lua  auto_tune.lua  auto_update.lua  bt_tether.lua  cache.lua  fix_services.lua  gpio_buttons.lua  gps.lua  grid.lua  logtail.lua  memtemp.lua  ohcapi.lua  pisugarx.lua  pwncrack.lua  session_stats.lua  ups_lite.lua  webcfg.lua  wigle.lua  wpa_sec.lua
crates/pwnagotchi-rs/: Cargo.toml
crates/pwnagotchi-rs/src/: main.rs
crates/pwncore/: Cargo.toml
crates/pwncore/src/: ap.rs  channel.rs  config.rs  epoch.rs  handshake.rs  lib.rs  mood.rs  peer.rs  personality.rs  station.rs
crates/pwnghost-rs/: Cargo.toml
crates/pwnghost-rs/src/: lib.rs  main.rs
crates/radio/: Cargo.toml
crates/radio/src/: bluetooth.rs  lib.rs  manager.rs  patchram.rs  safe.rs  wifi.rs
crates/rl-agent/: Cargo.toml
crates/rl-agent/src/: agent.rs  buffer.rs  checkpoint.rs  features.rs  lib.rs  model.rs  policy.rs
crates/ui/: Cargo.toml
crates/ui/display/: Cargo.toml
crates/ui/display/examples/: render_preview.rs
crates/ui/display/src/: driver.rs  epd_v4.rs  fonts.rs  hardware.rs  kaomoji_font_data.rs  layout.rs  lib.rs  ttf.rs
crates/ui/src/: lib.rs
crates/ui/web/: Cargo.toml
crates/ui/web/src/: api.rs  lib.rs  server.rs  ws.rs
crates/ui/web/static/: index.html
crates/ui/web/templates/: base.html  index.html
docs/parity/: GAP_MATRIX.md  HARDWARE_BOOT_AUDIT.md  REPORT.md  RUNTIME_PARITY_FIXES.md  SPEC.md  VERIFICATION.md  VERIFY_SWEEP.md  VOICE_MOOD_FACE_DIFF.md
pi-gen/: config
pi-gen/stage0/: prerun.sh
pi-gen/stage1/00-boot-files/files/: cmdline.txt  config.txt
pi-gen/stage2/00-base-os/: 00-run.sh
pi-gen/stage2/00-install-packages/: 00-run.sh
pi-gen/stage2/01-sys-tweaks/: 00-packages  01-run.sh
pi-gen/stage2/04-pwnghost-base/: 00-run.sh
pi-gen/stage3/: prerun.sh
pi-gen/stage3/00-kernel-nexmon/: 00-run.sh
pi-gen/stage3/04-nexmon/: 00-run.sh
pi-gen/stage4/: prerun.sh
pi-gen/stage4/00-install-artifacts/: 00-run.sh
pi-gen/stage4/00-rust-artifacts/: 00-run.sh
pi-gen/stage4/00-rust-build/: 00-run.sh
pi-gen/stage5/: EXPORT_IMAGE  prerun.sh
pi-gen/stage5/00-install-pwnghost/: 00-run.sh
pi-gen/stage5/01-runtime-overlay/: 00-run.sh
pi-gen/stage5/01-runtime-overlay/files/etc/NetworkManager/conf.d/: 99-bt-pan.conf  99-unmanage-usb0.conf
pi-gen/stage5/01-runtime-overlay/files/etc/NetworkManager/system-connections/: usb0.nmconnection
pi-gen/stage5/01-runtime-overlay/files/etc/systemd/system/: nm-watchdog.service  usb-gadget-setup.service  usb-net.service
specs/: handoff.md  implementation-notes.md
tools/: connect-usb.ps1
tools/parity/: run.sh  verify_all.py
tools/parity/compose/: Dockerfile.jayofelony  Dockerfile.mock  Dockerfile.pwnghost  docker-compose.yml  jayofelony_runner.py
tools/parity/mock_bettercap/: server.py
tools/parity/probes/: api_probe.py  io_probe.py  logic_probe.py  resource_probe.py  visual_probe.py
tools/parity/scenarios/: downtown_walk.json
tools/rebase-jayofelony/: Dockerfile  Dockerfile.crosscompile  README.md  build.sh
tools/rebase-jayofelony/overlay/etc/modprobe.d/: g_ether.conf
tools/rebase-jayofelony/overlay/etc/pwnghost/: config.toml
tools/rebase-jayofelony/overlay/etc/systemd/system/: pwnghost-rs.service  wlan_keepalive.service
tools/rebase-jayofelony/overlay/etc/update-motd.d/: 01-motd
