[workspace]
resolver = "2"
members = [
    "crates/pwncore",
    "crates/fw-patcher",
    "crates/bettercap",
    "crates/config",
    "crates/agent",
    "crates/rl-agent",
    "crates/radio",
    "crates/ui/display",
    "crates/ui/web",
    "crates/ui",
    "crates/pwnghost-rs",
]

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }
figment = { version = "0.10", features = ["toml", "env"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
mlua = { version = "0.10", features = ["lua54", "vendored", "send"] }
axum = { version = "0.7", features = ["ws"] }
tera = "1.0"
tower-http = { version = "0.6", features = ["cors"] }
embedded-graphics = "0.8"
# Pure-Rust TrueType/OpenType software rasterizer for the face + text.
# Real pwnagotchi renders the face as DejaVuSansMono-Bold at 35pt via
# FreeType; fontdue gives us equivalent outline rasterization with no C
# dependency (cross-compiles cleanly to ARMv6). `image`/png encoding is
# also used to serve the live framebuffer to the web UI (Phase 3).
fontdue = "0.9"
png = "0.17"
ssd1306 = { version = "0.10", features = ["graphics"] }
embedded-hal = "1.0"
epd-waveshare = "0.6"
linux-embedded-hal = { version = "0.4", default-features = false, features = ["spi", "gpio_cdev", "i2c"] }
ndarray = "0.16"
safetensors = "0.5"
zbus = "4.0"
zbus_xmlgen = "4.0"
dbus = "0.9"
libc = "0.2"
rand = "0.8"
mac-addr = { version = "0.3", features = ["serde"] }
proptest = "1.0"
tempfile = "3.0"
hex = "0.4"
base64 = "0.21"
sha2 = "0.10"
async-trait = "0.1"
# Persistent unit identity (Workstream D1): pure-Rust ed25519 (via
# curve25519-dalek), no C/asm dependency, cross-compiles cleanly to ARMv6 --
# same rationale as the fontdue choice above (avoid FreeType/OpenSSL-class
# native deps on this target).
ed25519-dalek = "2"
# Blocking HTTP client for the bettercap REST client (crates/bettercap).
# bettercap's API is loopback-only plain HTTP (never TLS), so a minimal
# blocking client wrapped in spawn_blocking is simpler and much lighter to
# cross-compile than reqwest's async+TLS stack for this one use.
ureq = { version = "2", default-features = false }

[profile.release]
opt-level = "z"
lto = "thin"
codegen-units = 4
strip = true
# NOT "abort". A real diagnosis this session traced an SD-card corruption
# bug in the reference Python implementation to exactly this class of
# problem: an unhandled fault killing the whole process outright, which
# then crash-loops. Our own bettercap JSON/websocket parsing already
# degrades gracefully into Result/JoinError (see crates/bettercap/src and
# main.rs's spawn_blocking call sites) -- but with panic="abort", any
# panic anywhere (including inside a spawn_blocking task) aborts the
# entire process before that JoinError handling ever runs, making it
# theoretical. "unwind" lets a panic in one tokio task surface as a
# catchable JoinError instead of taking the whole process down, and pairs
# with the std::panic::set_hook in main.rs that logs before either
# outcome so a panic is diagnosable in the journal instead of a bare
# SIGABRT indistinguishable from OOM/segfault.
panic = "unwind"

[profile.dev]
debug = true