[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "Main agent loop for PWNGHOST-RS"

[dependencies]
angryoxide = { path = "../angryoxide" }
pwncore = { path = "../pwncore" }
config = { path = "../config" }
rl-agent = { path = "../rl-agent" }
ui = { path = "../ui" }
radio = { path = "../radio" }
anyhow = { workspace = true }
chrono = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
mac-addr = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }