[package]
name = "agent"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pwncore.workspace = true
angryoxide.workspace = true
config.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
mac-addr.workspace = true
sha2.workspace = true
hex.workspace = true

[dev-dependencies]
tempfile.workspace = true
