[package]
name = "agent"
version = "0.1.0"
edition = "2021"
description = "Main agent loop for PWNGHOST-RS"

[dependencies]
pwncore = { path = "../pwncore" }
config = { path = "../config" }
rl-agent = { path = "../rl-agent" }
ui = { path = "../ui" }
radio = { path = "../radio" }
anyhow = { workspace = true }
chrono = { workspace = true }
mlua = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
mac-addr = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }