[package]
name = "angryoxide"
version = "0.1.0"
edition = "2021"
description = "AngryOxide subprocess wrapper and JSON parser"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
pwncore = { path = "../pwncore" }

[dev-dependencies]
tempfile = { workspace = true }
