[package]
name = "angryoxide"
version = "0.1.0"
edition = "2021"
description = "AngryOxide subprocess manager and event parser"
license = "GPL-3.0-or-later"
repository = "https://github.com/yourusername/pwnagotchi-rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["process", "fs", "time", "sync", "signal", "macros", "rt-multi-thread"] }
tracing = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio-test = { workspace = true }