[package]
name = "bettercap"
version = "0.1.0"
edition = "2021"
description = "REST client for the bettercap capture engine (replaces AngryOxide, matches real pwnagotchi's bettercap.py)"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
pwncore = { path = "../pwncore" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
ureq = { workspace = true, features = ["json"] }

[dev-dependencies]
tempfile = { workspace = true }
