[package]
name = "config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pwncore.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
figment.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
mac-addr.workspace = true

[dev-dependencies]
tempfile.workspace = true
