[package]
name = "fw-patcher"
version = "0.1.0"
edition = "2021"
description = "Firmware patcher for BCM43436B0 (CoderFX 8-layer patches)"

[dependencies]
anyhow = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
libc = { workspace = true }

# rppal only available on Linux (Raspberry Pi)
rppal = { version = "0.22", optional = true }

[features]
default = []
linux-gpio = ["rppal"]

[dev-dependencies]
tempfile = { workspace = true }