[package]
name = "pwnagotchi-rs"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pwncore.workspace = true
config.workspace = true
agent.workspace = true
angryoxide.workspace = true
fw-patcher.workspace = true
radio.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap = { version = "4.5", features = ["derive"] }
