[package]
name = "pwncore"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
description = "Core domain types for PwnGhost-RS"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
rand = { workspace = true }
mac-addr = { workspace = true, features = ["serde"] }

[dev-dependencies]
proptest = { workspace = true }
