[package]
name = "pwncore"
version = "0.1.0"
edition = "2021"
description = "Core domain types for pwnagotchi-rs"

[dependencies]
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
mac-addr = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }
tracing = { workspace = true }