[package]
name = "pwnghost-rs"
version = "0.1.0"
edition = "2021"
description = "Main binary for PWNGHOST-RS"

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
pwncore = { path = "../pwncore" }
config = { path = "../config" }
agent = { path = "../agent" }
fw-patcher = { path = "../fw-patcher" }
angryoxide = { path = "../angryoxide" }
radio = { path = "../radio" }
rl-agent = { path = "../rl-agent" }
ui = { path = "../ui" }

[build-dependencies]
anyhow = { workspace = true }

[features]
default = []
# Enables real GPIO-based WiFi chip power-cycling (rppal, Raspberry Pi only).
# Without this feature, `fw_patcher::gpio::power_cycle_wl_reg_on()` is a stub
# that logs a warning and returns an error, so the healer's PowerCycleGpio
# action always compiles and degrades gracefully.
linux-gpio = ["fw-patcher/linux-gpio"]
# Enables real SPI/GPIO e-ink display output (see crates/ui/display). Without
# this feature, the display driver falls back to a no-op/logging backend --
# real hardware never receives any framebuffer writes.
hardware = ["ui/hardware"]