[package]
name = "radio"
version = "0.1.0"
edition = "2021"
description = "Radio mode manager for PWNGHOST-RS (RAGE/BT/SAFE)"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
nix = { version = "0.28", optional = true }
libc = { version = "0.2", optional = true }

pwncore = { path = "../pwncore" }

# D-Bus dependencies (Linux only)
zbus = { workspace = true, optional = true }
zbus_xmlgen = { workspace = true, optional = true }
dbus = { workspace = true, optional = true }

[features]
default = []
bluetooth = ["zbus", "zbus_xmlgen", "dbus"]
linux-gpio = ["nix", "libc"]
