[package]
name = "radio"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
fw-patcher.workspace = true
tokio.workspace = true
tracing.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rppal.workspace = true

[dev-dependencies]
tempfile.workspace = true
