[package]
name = "rl-agent"
version = "0.1.0"
edition = "2021"
description = "A2C RL agent for PWNGHOST-RS (burn/candle)"

[dependencies]
anyhow = { workspace = true }
ndarray = { workspace = true }
safetensors = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }

pwncore = { path = "../pwncore" }
config = { path = "../config" }

[dev-dependencies]
tempfile = { workspace = true }