[package]
name = "ui-display"
version = "0.1.0"
edition = "2021"
description = "E-ink display driver for PWNGHOST-RS"

[dependencies]
anyhow = { workspace = true }
embedded-graphics = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
pwncore = { path = "../../pwncore" }

[dev-dependencies]
tempfile = { workspace = true }