[package]
name = "ui-display"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
pwncore.workspace = true
embedded-graphics.workspace = true
ssd1306.workspace = true
anyhow.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
rppal.workspace = true

[dev-dependencies]
tempfile.workspace = true
