[package]
name = "ui-web"
version = "0.1.0"
edition = "2021"
description = "Web UI for PWNGHOST-RS"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.7", features = ["ws", "multipart", "json"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "cors", "limit"] }
serde = { workspace = true }
serde_json = "1.0"
tokio = { workspace = true }
tracing = { workspace = true }
futures = "0.3"
pwncore = { path = "../../pwncore" }
config = { path = "../../config" }

[dev-dependencies]
tempfile = { workspace = true }